# sonar_bridge_poc

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build_and_run.sh  sonar_host  visualize.py
cpp_host/: main.cpp  sonar_engine.h
gazebo_plugin/: SonarPlugin.cpp
output/: demo_run.txt
shaders/: backscatter.wgsl  fft.wgsl  matmul.wgsl  sonar.wgsl
src/: lib.rs  main.rs  physics_engine.rs
validate/: compare_output.py  compute.py
